src/wrapper_refcounted/torch_refcounted_api_generated.h

void atg__fused_adam(value out, value self, value grads, value exp_avgs, value exp_avg_sqs, value max_exp_avg_sqs, value state_steps, double lr, double beta1, double beta2, double weight_decay, double eps, int amsgrad, int maximize, value grad_scale, value found_inf);
void atg__fused_adam_(value self, value grads, value exp_avgs, value exp_avg_sqs, value max_exp_avg_sqs, value state_steps, double lr, double beta1, double beta2, double weight_decay, double eps, int amsgrad, int maximize, value grad_scale, value found_inf);
void atg__fused_adam_tensor_lr_(value self, value grads, value exp_avgs, value exp_avg_sqs, value max_exp_avg_sqs, value state_steps, value lr, double beta1, double beta2, double weight_decay, double eps, int amsgrad, int maximize, value grad_scale, value found_inf);
void atg__fused_adam_tensor_lr_out(value out, value self, value grads, value exp_avgs, value exp_avg_sqs, value max_exp_avg_sqs, value state_steps, value lr, double beta1, double beta2, double weight_decay, double eps, int amsgrad, int maximize, value grad_scale, value found_inf);
void atg__fused_adamw(value out, value self, value grads, value exp_avgs, value exp_avg_sqs, value max_exp_avg_sqs, value state_steps, double lr, double beta1, double beta2, double weight_decay, double eps, int amsgrad, int maximize, value grad_scale, value found_inf);
void atg__fused_adamw_(value self, value grads, value exp_avgs, value exp_avg_sqs, value max_exp_avg_sqs, value state_steps, double lr, double beta1, double beta2, double weight_decay, double eps, int amsgrad, int maximize, value grad_scale, value found_inf);
void atg__fused_adamw_tensor_lr_(value self, value grads, value exp_avgs, value exp_avg_sqs, value max_exp_avg_sqs, value state_steps, value lr, double beta1, double beta2, double weight_decay, double eps, int amsgrad, int maximize, value grad_scale, value found_inf);
void atg__fused_adamw_tensor_lr_out(value out, value self, value grads, value exp_avgs, value exp_avg_sqs, value max_exp_avg_sqs, value state_steps, value lr, double beta1, double beta2, double weight_decay, double eps, int amsgrad, int maximize, value grad_scale, value found_inf);
value atg__fused_dropout(value self, double p);
value atg__fused_dropout_out(value out0, value out1, value self, double p);
value atg__fused_moving_avg_obs_fq_helper(value self, value observer_on, value fake_quant_on, value running_min, value running_max, value scale, value zero_point, double averaging_const, int64_t quant_min, int64_t quant_max, int64_t ch_axis, int per_row_fake_quant, int symmetric_quant);
value atg__fused_moving_avg_obs_fq_helper_functional(value self, value observer_on, value fake_quant_on, value running_min, value running_max, value scale, value zero_point, double averaging_const, int64_t quant_min, int64_t quant_max, int64_t ch_axis, int per_row_fake_quant, int symmetric_quant);
value atg__fused_moving_avg_obs_fq_helper_out(value out0, value out1, value self, value observer_on, value fake_quant_on, value running_min, value running_max, value scale, value zero_point, double averaging_const, int64_t quant_min, int64_t quant_max, int64_t ch_axis, int per_row_fake_quant, int symmetric_quant);
value atg__fused_sdp_choice(value query, value key, value value_, value attn_mask, double dropout_p, int is_causal, value scale, int enable_gqa);
void atg__fused_sgd(value out, value self, value grads, value momentum_buffer_list, double weight_decay, double momentum, double lr, double dampening, int nesterov, int maximize, int is_first_step, value grad_scale, value found_inf);
void atg__fused_sgd_(value self, value grads, value momentum_buffer_list, double weight_decay, double momentum, double lr, double dampening, int nesterov, int maximize, int is_first_step, value grad_scale, value found_inf);
void atg__fused_sgd_tensor_lr_(value self, value grads, value momentum_buffer_list, double weight_decay, double momentum, value lr, double dampening, int nesterov, int maximize, int is_first_step, value grad_scale, value found_inf);
void atg__fused_sgd_tensor_lr_out(value out, value self, value grads, value momentum_buffer_list, double weight_decay, double momentum, value lr, double dampening, int nesterov, int maximize, int is_first_step, value grad_scale, value found_inf);
value atg__fw_primal(value self, int64_t level);
value atg__fw_primal_copy(value self, int64_t level);
value atg__fw_primal_copy_out(value out, value self, int64_t level);
value atg__gather_sparse_backward(value self, int64_t dim, value index, value grad);
value atg__grid_sampler_2d_cpu_fallback(value input, value grid, int64_t interpolation_mode, int64_t padding_mode, int align_corners);
value atg__grid_sampler_2d_cpu_fallback_backward(value grad_output, value input, value grid, int64_t interpolation_mode, int64_t padding_mode, int align_corners);
value atg__grid_sampler_2d_cpu_fallback_out(value out, value input, value grid, int64_t interpolation_mode, int64_t padding_mode, int align_corners);
value atg__has_compatible_shallow_copy_type(value self, value from);
value atg__has_same_storage_numel(value self, value other);
value atg__histogramdd_bin_edges(value self, value bins, value range, value weight, int density);
void atg__histogramdd_bin_edges_out(value out, value self, value bins, value range, value weight, int density);
value atg__histogramdd_from_bin_cts(value self, value bins, value range, value weight, int density);
value atg__histogramdd_from_bin_cts_out(value out, value self, value bins, value range, value weight, int density);
value atg__histogramdd_from_bin_tensors(value self, value bins, value weight, int density);
value atg__histogramdd_from_bin_tensors_out(value out, value self, value bins, value weight, int density);
value atg__indices(value self);
value atg__indices_copy(value self);
value atg__indices_copy_out(value out, value self);
value atg__int_mm(value self, value mat2);
value atg__int_mm_out(value out, value self, value mat2);
value atg__is_all_true(value self);
value atg__is_any_true(value self);
value atg__is_zerotensor(value self);
value atg__lazy_clone(value self);