src/bindings/torch_bindings_generated0.ml


  let stubs__fused_adam =
    foreign
      "atg__fused_adam"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> double
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_adam_ =
    foreign
      "atg__fused_adam_"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> double
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_adam_tensor_lr_ =
    foreign
      "atg__fused_adam_tensor_lr_"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_adam_tensor_lr_out =
    foreign
      "atg__fused_adam_tensor_lr_out"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_adamw =
    foreign
      "atg__fused_adamw"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> double
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_adamw_ =
    foreign
      "atg__fused_adamw_"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> double
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_adamw_tensor_lr_ =
    foreign
      "atg__fused_adamw_tensor_lr_"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_adamw_tensor_lr_out =
    foreign
      "atg__fused_adamw_tensor_lr_out"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_dropout =
    foreign
      "atg__fused_dropout"
      (ptr raw_tensor @-> gc_tensor @-> double @-> returning void)
  ;;

  let stubs__fused_dropout_out =
    foreign
      "atg__fused_dropout_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> returning void)
  ;;

  let stubs__fused_moving_avg_obs_fq_helper =
    foreign
      "atg__fused_moving_avg_obs_fq_helper"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__fused_moving_avg_obs_fq_helper_functional =
    foreign
      "atg__fused_moving_avg_obs_fq_helper_functional"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__fused_moving_avg_obs_fq_helper_out =
    foreign
      "atg__fused_moving_avg_obs_fq_helper_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs__fused_sdp_choice =
    foreign
      "atg__fused_sdp_choice"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> double
       @-> int
       @-> int
       @-> returning int64_t)
  ;;

  let stubs__fused_sgd =
    foreign
      "atg__fused_sgd"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_sgd_ =
    foreign
      "atg__fused_sgd_"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> double
       @-> double
       @-> double
       @-> double
       @-> int
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_sgd_tensor_lr_ =
    foreign
      "atg__fused_sgd_tensor_lr_"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> double
       @-> double
       @-> gc_tensor
       @-> double
       @-> int
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fused_sgd_tensor_lr_out =
    foreign
      "atg__fused_sgd_tensor_lr_out"
      (ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> ptr gc_tensor
       @-> int
       @-> double
       @-> double
       @-> gc_tensor
       @-> double
       @-> int
       @-> int
       @-> int
       @-> gc_tensor
       @-> gc_tensor
       @-> returning void)
  ;;

  let stubs__fw_primal =
    foreign "atg__fw_primal" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__fw_primal_copy =
    foreign "atg__fw_primal_copy" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__fw_primal_copy_out =
    foreign
      "atg__fw_primal_copy_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs__gather_sparse_backward =
    foreign
      "atg__gather_sparse_backward"
      (gc_tensor @-> int64_t @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__grid_sampler_2d_cpu_fallback =
    foreign
      "atg__grid_sampler_2d_cpu_fallback"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs__grid_sampler_2d_cpu_fallback_backward =
    foreign
      "atg__grid_sampler_2d_cpu_fallback_backward"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs__grid_sampler_2d_cpu_fallback_out =
    foreign
      "atg__grid_sampler_2d_cpu_fallback_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__has_compatible_shallow_copy_type =
    foreign
      "atg__has_compatible_shallow_copy_type"
      (gc_tensor @-> gc_tensor @-> returning bool)
  ;;

  let stubs__has_same_storage_numel =
    foreign "atg__has_same_storage_numel" (gc_tensor @-> gc_tensor @-> returning bool)
  ;;

  let stubs__histogramdd_bin_edges =
    foreign
      "atg__histogramdd_bin_edges"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr double
       @-> int
       @-> gc_tensor
       @-> int
       @-> returning (ptr raw_tensor))
  ;;

  let stubs__histogramdd_bin_edges_out =
    foreign
      "atg__histogramdd_bin_edges_out"
      (ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr double
       @-> int
       @-> gc_tensor
       @-> int
       @-> returning void)
  ;;

  let stubs__histogramdd_from_bin_cts =
    foreign
      "atg__histogramdd_from_bin_cts"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr double
       @-> int
       @-> gc_tensor
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__histogramdd_from_bin_cts_out =
    foreign
      "atg__histogramdd_from_bin_cts_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr double
       @-> int
       @-> gc_tensor
       @-> int
       @-> returning raw_tensor)
  ;;
end

module C2 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs__histogramdd_from_bin_tensors =
    foreign
      "atg__histogramdd_from_bin_tensors"
      (gc_tensor @-> ptr gc_tensor @-> int @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs__histogramdd_from_bin_tensors_out =
    foreign
      "atg__histogramdd_from_bin_tensors_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr gc_tensor
       @-> int
       @-> gc_tensor
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs__indices = foreign "atg__indices" (gc_tensor @-> returning raw_tensor)

  let stubs__indices_copy =
    foreign "atg__indices_copy" (gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__indices_copy_out =
    foreign "atg__indices_copy_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__int_mm =
    foreign "atg__int_mm" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__int_mm_out =
    foreign
      "atg__int_mm_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs__is_all_true = foreign "atg__is_all_true" (gc_tensor @-> returning raw_tensor)
  let stubs__is_any_true = foreign "atg__is_any_true" (gc_tensor @-> returning raw_tensor)
  let stubs__is_zerotensor = foreign "atg__is_zerotensor" (gc_tensor @-> returning bool)
  let stubs__lazy_clone = foreign "atg__lazy_clone" (gc_tensor @-> returning raw_tensor)
